test/errors/python_error/zs/api_clashing/enumeration_with_api_clash_error.zs
package api_clashing.enumeration_with_api_clash_error;

enum uint8 Api
{
    API_1,
    API_2,
    API_3
};
